tests/ui/compile_fail/other_type_annotation.stderr
error[E0308]: mismatched types
  --> tests/ui/compile_fail/other_type_annotation.rs:10:25
   |
10 |     let c = a.semigroup(b);
   |               --------- ^ expected `Annotated<Coalesce<{integer}>, &str>`, found `Annotated<Coalesce<{integer}>, String>`
   |               |
   |               arguments to this method are incorrect
   |
   = note: expected struct `Annotated<Coalesce<{integer}>, &str>`
              found struct `Annotated<Coalesce<{integer}>, String>`
help: the return type of this call is `Annotated<Coalesce<{integer}>, String>` due to the type of the argument passed
  --> tests/ui/compile_fail/other_type_annotation.rs:10:13
   |
10 |     let c = a.semigroup(b);
   |             ^^^^^^^^^^^^-^
   |                         |
   |                         this argument influences the return type of `semigroup`
note: method defined here
  --> semigroup_base/src/semigroup.rs
   |
   |     fn semigroup(self, other: Self) -> Self
   |        ^^^^^^^^^
